# SR-agent

./: .gitignore  ECAPA_TDNN_RUNTIME_CHECKLIST.md  EXPERIMENT_RECORD_STRUCTURES.md  PROJECT_ARCHITECTURE.md  PROJECT_LOGIC_AND_INNOVATIONS.md  PROJECT_STRUCTURE.md  README.md  SYSTEM_ARCHITECTURE.md  TESTING_GUIDE.md  experiments_demo_export.json  main.py  modify,md  multi_agent.md  pyproject.toml
agent/: ANALYSIS.md  EXPERIMENT_DEMO_GUIDE.md  EXPERIMENT_STRUCTURE.md  HPO_AGENT_UPDATES.md  LANGCHAIN_V1_USAGE.md  README.md  SETUP_GUIDE.md  __init__.py  agent_logger.py  environment.yml  generate_demo_experiments.py  hpo_agent.py  test.py  test_agent.py  test_report.md
agent/agents/: __init__.py  a2a.py  base_agent.py  communication.py  coordination.py  data_processing_agent.py  hpo_agent.py  orchestration_workflow.py  orchestrator.py  react_agent.py
agent/core/: __init__.py  adapters.py  contracts.py  experiment_service.py
agent/data_processing/: __init__.py  contracts.py  handoff.py  registry.py  service.py  workflow.py
agent/experiments/: experiments_history.json
agent/hpo/: __init__.py  campaign.py  contracts.py  feedback.py  policies.py  scheduler.py  service.py  strategies.py
agent/memory/: __init__.py  store.py
agent/models/: __init__.py  contracts.py  ecapa_tdnn.py  registry.py  speechbrain_speaker.py
agent/prompt/: __init__.py  data_processing_planning_advice.json  hpo_strategy_proposal.json  loader.py  orchestration_coordination_advisor.json
agent/prompts/: dp_prompt.txt  hpo_agent_prompt.txt  hpo_prompt.txt  hpo_system_prompt.txt
agent/runners/: __init__.py  contracts.py  registry.py  soundfile_audio.py  speechbrain.py  speechbrain_backend.py  speechbrain_dependency.py
agent/tasks/: __init__.py  contracts.py  registry.py  speaker_verification.py
agent/tools/: __init__.py  config_tools.py  data_processing_tools.py  dataset_tools.py  evaluation_tools.py  experiment_history_tools.py  hpo_tools.py  reward_tools.py  speechbrain_data_tools.py  training_diagnostics_tools.py  training_tools.py
agent/utils/: __init__.py  agent_middleware.py  config_parser.py  experiment_tracker.py  experiment_versioning.py  logger.py  metrics.py  path_tool.py  reward.py  runner.py
configs/: __init__.py  train_ecapa_tdnn.backup_20260521_175022.yaml  train_ecapa_tdnn.backup_20260522_015320.yaml  train_ecapa_tdnn.backup_20260522_020125.yaml  train_ecapa_tdnn.backup_20260522_020307.yaml  train_ecapa_tdnn.backup_20260522_020526.yaml  train_ecapa_tdnn.backup_20260522_020756.yaml  train_ecapa_tdnn.yaml  train_ecapa_tdnn.yaml.backup_20260329_145009  train_ecapa_tdnn.yaml.backup_20260330_012528  train_ecapa_tdnn.yaml.backup_20260331_141732  train_resnet.yaml  verification_ecapa.yaml  verification_resnet.yaml
demo/: README.md  run_ecapa_hpo.py
demo/config/: ecapa_smoke.json
read/: AAAI_SUBMISSION_READINESS_AUDIT.md  AGENT_OPTIMIZATION_ROADMAP.md  COORDINATION_REFACTOR.md  DATA_PROCESSING_EXTENSION.md  ECAPA_TDNN_RUNTIME_CHECKLIST.md  MODEL_AGNOSTIC_EXPERIMENT_REFACTOR.md  SYSTEM_INTERFACE_AUDIT_AND_AAAI_INNOVATION.md
recipes/: __init__.py  eval_pipeline.py  train_pipeline.py  voxceleb_prepare.py
recipes/voxceleb/: __init__.py  audio_compat.py  augmentation_prepare.py  batch_compat.py  speaker_verification_cosine.py  train_speaker_embeddings.py  verification_compat.py  voxceleb_prepare.py
scripts/: archive_experiments.sh  clear_experiments.sh  run_comparison_experiments.py  run_comparison_experiments.sh  run_resnet_hpo_comparison.sh  run_xvector_hpo_comparison.sh
scripts/admin/: archive_experiments.sh  clear_experiments.sh  experiment_admin.py
scripts/evaluation/: __init__.py  evaluate_checkpoint.py
scripts/experiments/: run_comparison_experiments.py  run_comparison_experiments.sh  run_resnet_hpo_comparison.sh  run_xvector_hpo_comparison.sh
scripts/tools/: check_remote_environment.py
tests/: __init__.py  conftest.py  fakes.py
tests/integration/: __init__.py  test_fake_runner_tool_boundary.py  test_hpo_service.py
tests/smoke/: test_base_agent_llm.py
tests/unit/: __init__.py  test_communication.py  test_comparison_experiments.py  test_contracts.py  test_data_handoff.py  test_data_path_configuration.py  test_data_processing.py  test_evaluate_checkpoint_script.py  test_execution_trace.py  test_experiment_admin.py  test_experiment_tracker.py  test_experiment_versioning.py  test_hpo_feedback_campaign.py  test_hpo_scheduler.py  test_hpo_strategies.py  test_hpo_strategy_decisions.py  test_langgraph_workflows.py  test_main_cli.py  test_memory.py  test_package_structure.py  test_prompt_templates.py  (+7 more)
(+7 files in other folders)
