[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sr-agent"
version = "0.1.0"
description = "Agentic, model-agnostic hyperparameter optimization for speaker recognition"
requires-python = ">=3.10"
dependencies = [
    "speechbrain==1.0.3",
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "python-dotenv>=1.0.0",
    "hyperpyyaml>=0.0.1",
    "joblib>=0.14.1",
    "numpy>=1.17.0",
    "optuna>=3.6.0",
    "packaging",
    "requests>=2.20.0",
    "scipy>=1.4.1",
    "sentencepiece>=0.1.91",
    "soundfile>=0.12.1",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "tqdm>=4.42.0",
    "huggingface_hub>=0.8.0",
]
keywords = ["hyperparameter-optimization", "speaker-recognition", "agents"]

[project.optional-dependencies]
dev = [
    "ruff==0.12.4",
    "pytest==7.4.0",
    "yamllint==1.35.1",
    "pre-commit>=2.3.0",
    "pandas>=1.0.1",
    "transformers>=4.30.0",
    "codespell>=2.3.0",
]

[tool.setuptools.packages.find]
include = ["agent*", "recipes*", "configs*"]
exclude = ["tests", "tests.*"]

[tool.setuptools.package-data]
"recipes.voxceleb" = ["hparams/*.yaml"]
configs = ["*.yaml"]
[tool.ruff]
target-version = "py310"
line-length = 80
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".tox",
    ".venv",
    "tests/tmp",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort (import sorting)
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "B007",  # Loop control variable not used within loop body
    "B904",  # Within an `except` clause, raise exceptions with `raise ... from err`
    "B028",  # No explicit `stacklevel` keyword argument found
    "C400",  # Unnecessary generator (rewrite as a `list` comprehension)
    "C401",  # Unnecessary generator (rewrite as a `set` comprehension)
    "C403",  # Unnecessary `list` comprehension (rewrite as a `set` comprehension)
    "C404",  # Unnecessary `list` call within `sorted()`
    "C405",  # Unnecessary `list` literal (rewrite as a `set` literal)
    "C408",  # Unnecessary `dict`/`list` call (rewrite as literal)
    "C409",  # Unnecessary `tuple` literal passed to `tuple()`
    "C414",  # Unnecessary `list` call within `sorted()`
    "C416",  # Unnecessary `list` comprehension (rewrite using `list()`)
    "C417",  # Unnecessary `map` usage (rewrite using a `list` comprehension)
    "C419",  # Unnecessary list comprehension
    "E203",  # whitespace before ':' (black compatibility)
    "E266",  # too many leading '#' for block comment
    "E501",  # line too long (handled by formatter)
    "E721",  # Do not compare types, use `isinstance()`
    "F601",  # Dictionary key literal repeated
    "UP008",  # Use `super()` instead of `super(__class__, self)`
    "UP028",  # Replace `yield` over `for` loop with `yield from`
    "UP030",  # Use implicit references for positional format fields
    "UP031",  # Use format specifiers instead of percent format
    "B008",  # do not perform function calls in argument defaults
    "B006",  # do not use mutable data structures for argument defaults
    "B011",  # Do not `assert False` (`python -O` removes these calls), raise `AssertionError()`
    "B019",  # Use of `functools.lru_cache` or `functools.cache` on methods can lead to memory leaks
    "B023",  # Function definition does not bind loop variable
    "B026",  # Star-arg unpacking after a keyword argument is strongly discouraged
]

[tool.ruff.lint.isort]
# Import sorting configuration (black-compatible)
combine-as-imports = true
force-wrap-aliases = true
known-first-party = ["speechbrain"]
known-third-party = ["torch", "torchaudio", "numpy", "scipy", "hyperpyyaml", "joblib", "packaging", "requests", "sentencepiece", "tqdm", "huggingface_hub"]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.codespell]
skip = "./tests/tmp,./**/result,*.csv,*train.txt,*test.txt"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "unit: pure unit and contract tests",
    "integration: component integration tests without GPU or external services",
    "gpu: tests that require GPU resources",
    "slow: long-running tests",
]
